--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
-<html xmlns="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-	<title>Spring Core Online Tutorial</title>
-	<meta http-equiv="Content-Type" content="txt/html; charset=UTF8"/>
-	<link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
-		th:href="@{/webjars/bootstrap/3.3.5/css/bootstrap.min.css}"
-		rel="stylesheet" media="screen" />
-		
-	<script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js" 
-			th:href="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
-			
-	<link href="../static/css/spring-core.css"
-			th:href="@{css/spring-core.css}"
-			rel="stylesheet"
-			media="screen"/>
+
+    <title>Spring Core Online Tutorial</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+
+    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
+          th:href="@{/webjars/bootstrap/3.3.5/css/bootstrap.min.css}"
+          rel="stylesheet" media="screen" />
+
+    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
+            th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
+
+    <link href="../static/css/spring-core.css"
+          th:href="@{css/spring-core.css}" rel="stylesheet" media="screen"/>
 </head>
 <body>
 <div class="container">
-	<h1>Hello World</h1>
-	<h2>This is my Thymeleaf index page. CHANGED</h2>
+    <h1>Hello World</h1>
+
+    <h2>This is my Thymeleaf index page.</h2>
+
+    <ul>
+        <li><a href="product/list">Products</a></li>
+        <li><a href="customer/list">Customers</a></li>
+    </ul>
+
 </div>
 
 </body>
